[tool.poetry]
name = "connectivity_checker"
version = "0.1.0"
description = ""
authors = ["gpx-abhijith-hari <abhijith.hari@globalpayex.com>"]

[tool.poetry.dependencies]
python = "^3.9"
emoji = "^2.2.0"
codetiming = "^1.4.0"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
